deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zercle-go-template
  namespace: zercle-go-template
spec:
  selector:
    app: zercle-go-template
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: metrics
      port: 9090
      targetPort: 9090
